fix Payment