@@ -4,6 +4,7 @@ import com.ummbatin.service_management.dtos.UserDto;
 import com.ummbatin.service_management.models.User;
 import com.ummbatin.service_management.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,6 +12,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -20,20 +22,20 @@ public class UserController {
     private UserService userService;
 
     @GetMapping("/all")
-    @PreAuthorize("hasRole('ADMIN')") //  Only admins can see all users
-    public List<UserDto> getAllUsers() {
-        return userService.getAllUsers()
-                .stream()
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<List<UserDto>> getAllUsers() {
+        List<User> users = userService.getAllUsers();
+        List<UserDto> userDtos = users.stream()
                 .map(UserDto::new)
-                .toList();
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(userDtos);
     }
 
     @GetMapping("/profile")
-    public UserDto getUserProfile(Authentication authentication) {
+    public ResponseEntity<UserDto> getUserProfile(Authentication authentication) {
         String email = authentication.getName();
-
         User user = userService.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("User not found"));
-        return new UserDto(user);
+        return ResponseEntity.ok(new UserDto(user));
     }
 }
